bk_ida/gccida/g0/ix86_va_start
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2978:5: error: expected ';' after expression
tree valista; // [rsp+10h] [rbp-70h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2978:6: error: use of undeclared identifier 'valista'; did you mean 'valist'?
tree valista; // [rsp+10h] [rbp-70h] 
     ^~~~~~~
     valist
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2968:41: note: 'valist' declared here
void  ix86_va_start( int stdarg_p, tree valist, rtx nextarg) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2982:5: error: expected ';' after expression
tree sav; // [rsp+38h] [rbp-48h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2982:6: error: use of undeclared identifier 'sav'
tree sav; // [rsp+38h] [rbp-48h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2983:5: error: expected ';' after expression
tree ovf; // [rsp+40h] [rbp-40h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2983:6: error: use of undeclared identifier 'ovf'
tree ovf; // [rsp+40h] [rbp-40h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2984:5: error: expected ';' after expression
tree fpr; // [rsp+48h] [rbp-38h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2984:6: error: use of undeclared identifier 'fpr'; did you mean 'for'?
tree fpr; // [rsp+48h] [rbp-38h] 
     ^~~
     for
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2984:9: error: expected '(' after 'for'
tree fpr; // [rsp+48h] [rbp-38h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2985:5: error: expected ';' after expression
tree gpr; // [rsp+50h] [rbp-30h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2985:6: error: use of undeclared identifier 'gpr'
tree gpr; // [rsp+50h] [rbp-30h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2986:5: error: expected ';' after expression
tree f_sav; // [rsp+58h] [rbp-28h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2986:6: error: use of undeclared identifier 'f_sav'
tree f_sav; // [rsp+58h] [rbp-28h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2987:5: error: expected ';' after expression
tree f_ovf; // [rsp+60h] [rbp-20h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2987:6: error: use of undeclared identifier 'f_ovf'
tree f_ovf; // [rsp+60h] [rbp-20h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2988:5: error: expected ';' after expression
tree f_fpr; // [rsp+68h] [rbp-18h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2988:6: error: use of undeclared identifier 'f_fpr'; did you mean 'n_fpr'?
tree f_fpr; // [rsp+68h] [rbp-18h] 
     ^~~~~
     n_fpr
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2979:9: note: 'n_fpr' declared here
__int64 n_fpr; // [rsp+20h] [rbp-60h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2989:5: error: expected ';' after expression
tree f_gpr; // [rsp+70h] [rbp-10h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2989:6: error: use of undeclared identifier 'f_gpr'; did you mean 'n_gpr'?
tree f_gpr; // [rsp+70h] [rbp-10h] 
     ^~~~~
     n_gpr
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/i386.c:2980:9: note: 'n_gpr' declared here
__int64 n_gpr; // [rsp+28h] [rbp-58h] 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_start/src/obj/i386.o] Error 1
